@@ -1,28 +1,7 @@
 AUX 5.1.3/jetty.conf 932 RMD160 9af20ff885874060374b7f840b333f13a095cf18 SHA1 c2c3365d9f6df8671d55cd3b663abdbf71b93e5a SHA256 45885971a4d6c55659d5b39caa9d7fd5282aea0a2a30b13ee35d62e66fd688a1
-MD5 a89e81144bf60be64e44c6e9003a3814 files/5.1.3/jetty.conf 932
-RMD160 9af20ff885874060374b7f840b333f13a095cf18 files/5.1.3/jetty.conf 932
-SHA256 45885971a4d6c55659d5b39caa9d7fd5282aea0a2a30b13ee35d62e66fd688a1 files/5.1.3/jetty.conf 932
 AUX 5.1.3/jetty.etc 23 RMD160 bb09232abfb29a6b079cbcccb39eef32e61d7326 SHA1 17be9307625f0c99c657421e6cefe79b3c284441 SHA256 77040483f4df9c14691fcdb3ec97a4c17cfc30263ddb1232e51e2117af51f026
-MD5 c3fe5f7a80a63c11087f572a51a37460 files/5.1.3/jetty.etc 23
-RMD160 bb09232abfb29a6b079cbcccb39eef32e61d7326 files/5.1.3/jetty.etc 23
-SHA256 77040483f4df9c14691fcdb3ec97a4c17cfc30263ddb1232e51e2117af51f026 files/5.1.3/jetty.etc 23
 AUX 5.1.3/jetty.init 1007 RMD160 6339bf9812324d9fd2e4a1b3c83ecf4fd2e162bd SHA1 806198775756e1b359c3cfb38df8b217a17dcbba SHA256 1138111c94b58a5b607f93f07bddc7572263347bafbca09a3425ebf654cc6c7a
-MD5 792b2d4d15bcda566a09fc88ad4bfc64 files/5.1.3/jetty.init 1007
-RMD160 6339bf9812324d9fd2e4a1b3c83ecf4fd2e162bd files/5.1.3/jetty.init 1007
-SHA256 1138111c94b58a5b607f93f07bddc7572263347bafbca09a3425ebf654cc6c7a files/5.1.3/jetty.init 1007
 AUX 5.1.3/jetty.patch 4368 RMD160 c5c054ba7f3487d8348497320cc786775fd41b1d SHA1 93637f268c558f59b164647cfc651b04ca0340ea SHA256 264dfc83cc5771669a689886870b0fc8c1a0176d691c126bd449f78023fcf2bb
-MD5 555934986a82028372ffdbda172660eb files/5.1.3/jetty.patch 4368
-RMD160 c5c054ba7f3487d8348497320cc786775fd41b1d files/5.1.3/jetty.patch 4368
-SHA256 264dfc83cc5771669a689886870b0fc8c1a0176d691c126bd449f78023fcf2bb files/5.1.3/jetty.patch 4368
 DIST jetty-5.1.3-all.zip 13626924 RMD160 334731e4b9fba4fa84d657a14c0034142260aa71 SHA1 0baf54f46ed631163e763d4db1269dcd75f3aa2c SHA256 770e70f83510a143bb606137627376d78d9f5c5e4e4cf8e3dbc0be18d36e0a5b
-EBUILD jetty-5.1.3-r1.ebuild 6702 RMD160 eb01f2a85fe01ca7a1d2a8510a864e72a8911639 SHA1 64d451e775d09e985b56020bf66f791fedab872f SHA256 033fca6d03cd9195ad343a7773cd01d2521d878fde1f47350be0d714c8725c85
-MD5 51a7cf6f875c554a1cf77ec51a3edccc jetty-5.1.3-r1.ebuild 6702
-RMD160 eb01f2a85fe01ca7a1d2a8510a864e72a8911639 jetty-5.1.3-r1.ebuild 6702
-SHA256 033fca6d03cd9195ad343a7773cd01d2521d878fde1f47350be0d714c8725c85 jetty-5.1.3-r1.ebuild 6702
-MISC ChangeLog 325 RMD160 feb050c8c9afaee66da2bac3f579a17395c5da1a SHA1 c5059900f1349d84b2d36f51098422d6f634dbb9 SHA256 cc881003c389a39a2f4cc4f3a8b5c311ca76fb75db0db13533048d332dbc4189
-MD5 c9d097db7a718bb93e32937360082a68 ChangeLog 325
-RMD160 feb050c8c9afaee66da2bac3f579a17395c5da1a ChangeLog 325
-SHA256 cc881003c389a39a2f4cc4f3a8b5c311ca76fb75db0db13533048d332dbc4189 ChangeLog 325
-MD5 794e60278b423d31fb32d5c6115aa7c1 files/digest-jetty-5.1.3-r1 244
-RMD160 34f2247bf15136c37e55f36b973e7df782693505 files/digest-jetty-5.1.3-r1 244
-SHA256 edd18cdc1abcbfd4a9e8198cd887d112dc1dcffb17cb5b02b2b67711ac037b41 files/digest-jetty-5.1.3-r1 244
+EBUILD jetty-5.1.3-r1.ebuild 6867 RMD160 6c22bec9aaa87d93818e3da1b7504f0f432d4515 SHA1 f6d9a74baeb4c3af6f429c007c0409aa24be33ed SHA256 08ad034a68559c0cbe0b90b45f3e4c30f219f2db9d80f127807aee9e2caede0e
+MISC ChangeLog 517 RMD160 e1b6f5d3fc8db85985c151f60173b35b5ba2feb2 SHA1 4ba881f326fd53ac94edcd7df0b8e60d2cacde62 SHA256 bca3890f2bde33ff371cc0b2d0829e206b2583abeb86e58a4954a1ee70b20e70
