@@ -2,5 +2,12 @@
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/jetty/ChangeLog,v 1.7 2007/01/09 15:45:36 caster Exp $
 
+  21 Apr 2007; kiorky <kiorky@cryptelium.net> jetty-5.1.3-r1.ebuild:
+  Make the ebuild work again
+  	Fix some typos
+  	Add die messages
+  	Remove ending/trailing wp
+  	Correct depend/rdepend
+
   27 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
   Updated jasper dep to reflect new package name.
